# cmake-mxnet-template

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh
modules/: FindMxNet.cmake
src/: CMakeLists.txt  main.cpp  version.h  version.h.in
